# quiz

./: .gitignore  Cargo.toml  README.md
quiz/: event.js  index.html  login.js  main.js  quiz.config  style.css  utils.js
src/: cli.rs  error.rs  main.rs  question.rs  quiz_state.rs  server.rs  service.rs  sse.rs  state.rs
src/cli/: command.rs  print.rs
src/server/: listener.rs  serve.rs  sse.rs
src/state/: config.rs  owner.rs  question.rs  service.rs  status.rs
