[package]
name = "quiz"
version = "0.1.0"
authors = ["mathijsd <napoleonpapiertjes@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
futures = "0.3"
http = "0.2"
hyper = "0.13"
hyper-staticfile = "0.5"
local_ipaddress = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabular = "0.1"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }