[package]
name = "quiz"
version = "0.2.0"
authors = ["mathijsd <napoleonpapiertjes@gmail.com>"]
edition = "2024"

[dependencies]
clap = "2.33"
futures = "0.3"
http = "1.2"
http-body-util = { version = "0.*" }
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-staticfile = "0.*"
hyper-util = { version = "0.*", features = ["tokio"] }
local_ipaddress = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabular = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.*", features = ["codec"] }
tokio-stream = "0.*"